--- a/templates/base.html
+++ b/templates/base.html
@@ -1,67 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{% block title %}LabComply{% endblock %}</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- MUI Icons -->
-  <link href="https://cdn.jsdelivr.net/npm/@mui/icons-material/dist/material-icons.css" rel="stylesheet" />
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-</head>
 
+  <!-- External Styles -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/@mui/icons-material/dist/material-icons.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
+</head>
 <body>
-  <!-- Navbar with Material UI Components -->
-  <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="{{ url_for('index') }}">
-        <span class="material-icons">LabComply</span>
-      </a>
-      <ul class="navbar-nav me-auto">
+
+  <div class="d-flex" id="wrapper">
+    <!-- Sidebar -->
+    <div id="sidebar" class="bg-dark text-white p-3">
+      <h4 class="mb-4">Dashboard</h4>
+      <ul class="list-unstyled">
+        <li><strong>E2-L6-016</strong></li>
+        <li class="ps-3"><a href="{{ url_for('index', camera='1') }}" class="text-decoration-none text-white">Camera 1</a></li>
+        <li class="ps-3"><a href="{{ url_for('index', camera='2') }}" class="text-decoration-none text-white">Camera 2</a></li>
+        <li class="mt-3"><strong>E2-L6-017</strong></li>
+        <li class="ps-3"><a href="{{ url_for('index', camera='1') }}" class="text-decoration-none text-white">Camera 1</a></li>
+        <li class="ps-3"><a href="{{ url_for('index', camera='2') }}" class="text-decoration-none text-white">Camera 2</a></li>
       </ul>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <!-- User Profile Icon -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="userProfileDropdown" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fas fa-user"></i>
-            </a>
-            <ul class="dropdown-menu custom-dropdown-menu" aria-labelledby="userProfileDropdown">
-              {% if session['logged_in'] %}
-              <!-- User is logged in -->
-              <li>
-                <a class="dropdown-item" href="{{ url_for('edit_profile') }}">Edit Profile</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a>
-              </li>
-              {% endif %}
-            </ul>
-          </li>
-        </ul>
+    </div>
+
+
+    <!-- Page Content -->
+    <div id="page-content" class="flex-grow-1">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom px-4">
+        <span class="navbar-brand mb-0 h4">Detection Search</span>
+        <div class="ms-auto">
+          <i class="fas fa-user-circle fa-lg me-2"></i> Hi Admin
+        </div>
+      </nav>
+
+      <div class="container-fluid mt-4">
+        {% block content %}{% endblock %}
       </div>
     </div>
-  </nav>
-  <!-- Main Content Block -->
-  <div class="container mt-4">{% block content %}{% endblock %}</div>
+  </div>
 
-  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-    crossorigin="anonymous"></script>
-  <script defer src="{{ url_for('static', filename='js/index.js') }}"></script>
-  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Scripts -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 </body>
-
-<footer class="container my-5">
-  <hr>
-  <p><em>Copyright &copy;</em></p>
-</footer>
 
 </html>
