--- a/templates/login.html
+++ b/templates/login.html
@@ -21,9 +21,9 @@
 
             <form method="POST" class="login-form">
                 <div class="form-group">
-                    <label for="username" class="form-label">Username</label>
-                    <input type="text" class="form-control login-input" id="username" name="username"
-                        placeholder="Enter your username" required>
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control login-input" id="email" name="email"
+                        placeholder="Enter your email" required>
                 </div>
 
                 <div class="form-group">
