--- a/templates/base.html
+++ b/templates/base.html
@@ -84,8 +84,7 @@
                                     <i class="fas fa-user"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                    <li><a class="dropdown-item" href="#">Login</a></li>
-                                    <li><a class="dropdown-item" href="#">Register</a></li>
+                                    <li><a class="dropdown-item" href="{{ url_for('login') }}">Login</a></li>
                                 </ul>
                             </div>
                         {% endif %}
