--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,7 @@ body, html {
 #sidebar {
     background-color: #0d1e2d;
     font-size: 0.95rem;
+    min-width: 230px;
 }
 
 #sidebar ul li {
@@ -189,4 +190,16 @@ button[type="submit"]:hover {
 /* Hide default right-side caret */
 .nav-link.dropdown-toggle::after {
     display: none;
+}
+
+.icon-pencil {
+    color: yellow;
+}
+
+.icon-trash {
+    color: red;
+}
+
+.icon-plus {
+    color: green;
 }
