--- a/templates/base.html
+++ b/templates/base.html
@@ -32,12 +32,12 @@
                                     {{ camera.camera_name }}
                                 </a>
                                 <a href="{{ url_for('edit_camera', camera_id=camera.camera_id) }}?camera={{ camera.camera_name }}&lab={{ lab.lab_name }}"
-                                    class="ms-2 icon-pencil" title="Edit">
+                                   class="ms-2 icon-pencil" title="Edit">
                                     <i class="fa-solid fa-pencil"></i>
                                 </a>
-                                <a href="{{ url_for('index',  edit=0, delete=1) }}"
+                                <a href="{{ url_for('index',  edit=0, delete=1, camera=camera.camera_name, lab=lab.lab_name) }}"
                                    class="ms-2 icon-trash" title="Delete">
-                                   <i class="fa-solid fa-trash-can"></i>
+                                    <i class="fa-solid fa-trash-can"></i>
                                 </a>
                             </li>
                         {% endfor %}
