--- a/modularized/web/templates/base.html
+++ b/modularized/web/templates/base.html
@@ -126,6 +126,9 @@
 <script src="https://code.jquery.com/jquery-3.7.2.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+
+{% block scripts %}{% endblock %}
+
 </body>
 
 </html>
